[gd_scene load_steps=26 format=3 uid="uid://tpxb4jya3ljo"]

[ext_resource type="Script" path="res://Scenes/WorldScenes/Player.gd" id="1_6prhd"]
[ext_resource type="Texture2D" uid="uid://ddeivusmwra44" path="res://Assets/Sprites/Character/Spritesheet.png" id="2_de8wh"]
[ext_resource type="Theme" uid="uid://c36ywjvt5x7kl" path="res://Assets/GuiThemes/MainTheme.tres" id="3_2oqec"]
[ext_resource type="Texture2D" uid="uid://bx1yb2ywhu3c1" path="res://Assets/Gui/Chat_Bubble.png" id="4_rgt47"]
[ext_resource type="AudioStream" uid="uid://v44h0p8c3o7f" path="res://Assets/Audio/footstep.ogg" id="5_8lunl"]
[ext_resource type="AudioStream" uid="uid://b0dgibbokbryy" path="res://Assets/Audio/clothingUpdate.ogg" id="5_26tbm"]
[ext_resource type="AudioStream" uid="uid://bmv2it3joe8qx" path="res://Assets/Audio/jump.ogg" id="6_5qh8x"]
[ext_resource type="AudioStream" uid="uid://cxw0xhwndc48j" path="res://Assets/Audio/Ground_Impact.ogg" id="8_sn8ko"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kcmks"]
size = Vector2(12, 25)

[sub_resource type="Animation" id="Animation_eyche"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:Hitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_x7mq2"]
resource_name = "death"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [23, 24, 25, 26, 27, 28]
}

[sub_resource type="Animation" id="Animation_a7yoc"]
resource_name = "falling"
length = 500.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [12, 13]
}

[sub_resource type="Animation" id="Animation_dvioy"]
resource_name = "hit"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [14, 15, 16, 17, 18, 19]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:Hitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_w2jr7"]
resource_name = "hurt"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [20, 21]
}

[sub_resource type="Animation" id="Animation_d56mn"]
resource_name = "idle"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_nqg6v"]
resource_name = "jumping"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_jk0wx"]
resource_name = "walking"
length = 0.54
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.09, 0.18, 0.27, 0.36, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [2, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_denbm"]
_data = {
"RESET": SubResource("Animation_eyche"),
"death": SubResource("Animation_x7mq2"),
"falling": SubResource("Animation_a7yoc"),
"hit": SubResource("Animation_dvioy"),
"hurt": SubResource("Animation_w2jr7"),
"idle": SubResource("Animation_d56mn"),
"jumping": SubResource("Animation_nqg6v"),
"walking": SubResource("Animation_jk0wx")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k3fg1"]
size = Vector2(14, 30)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yf64e"]
size = Vector2(14, 30)

[sub_resource type="CircleShape2D" id="CircleShape2D_ntxwb"]
radius = 7.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_117a5"]
texture = ExtResource("4_rgt47")
texture_margin_left = 3.0
texture_margin_right = 3.0
region_rect = Rect2(0, 0, 32, 16)

[sub_resource type="Animation" id="Animation_ju31b"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1e-05, 1e-05)]
}

[sub_resource type="Animation" id="Animation_mq0hd"]
resource_name = "Zoom"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0.287175, 0.287175),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fqt4x"]
_data = {
"RESET": SubResource("Animation_ju31b"),
"Zoom": SubResource("Animation_mq0hd")
}

[node name="Player" type="CharacterBody2D" groups=["Players"]]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_6prhd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_kcmks")
one_way_collision = true
one_way_collision_margin = 2.0

[node name="Sprite" type="Sprite2D" parent="."]
z_index = 3
texture = ExtResource("2_de8wh")
hframes = 33
frame = 23

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_denbm")
}

[node name="NameLabel" type="RichTextLabel" parent="."]
z_index = 1678
offset_left = -125.0
offset_top = -36.0
offset_right = 125.0
offset_bottom = -13.0
theme = ExtResource("3_2oqec")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
bbcode_enabled = true
scroll_active = false

[node name="Clothing" type="Node2D" parent="."]

[node name="Back" type="Sprite2D" parent="Clothing"]
z_index = 2
hframes = 33

[node name="Pants" type="Sprite2D" parent="Clothing"]
z_index = 3
hframes = 33

[node name="Shoes" type="Sprite2D" parent="Clothing"]
z_index = 3
hframes = 33

[node name="Shirt" type="Sprite2D" parent="Clothing"]
z_index = 3
hframes = 33

[node name="Hair" type="Sprite2D" parent="Clothing"]
z_index = 3
hframes = 33

[node name="Face" type="Sprite2D" parent="Clothing"]
z_index = 3
hframes = 33

[node name="Hat" type="Sprite2D" parent="Clothing"]
z_index = 3
hframes = 33

[node name="Hand" type="Sprite2D" parent="Clothing"]
z_index = 3
hframes = 33

[node name="Tool" type="Sprite2D" parent="Clothing"]
z_index = 3
hframes = 33

[node name="HurtCollider" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtCollider"]
shape = SubResource("RectangleShape2D_k3fg1")
debug_color = Color(0.866667, 0.356863, 0, 0.419608)

[node name="BounceCollider" type="Area2D" parent="." groups=["BounceCollider"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BounceCollider"]
shape = SubResource("RectangleShape2D_yf64e")
debug_color = Color(0.37752, 0.562403, 0.681243, 0.419608)

[node name="Area2D" type="Area2D" parent="."]
modulate = Color(0.94902, 0.294118, 0.913725, 1)

[node name="DropCollision" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_ntxwb")
debug_color = Color(1, 1, 1, 0.419608)

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(-7, 0)
target_position = Vector2(0, 20)

[node name="RayCast2D2" type="RayCast2D" parent="."]
position = Vector2(7, 0)
target_position = Vector2(0, 20)

[node name="LandCast" type="RayCast2D" parent="."]
target_position = Vector2(0, 20)

[node name="LandCast2" type="RayCast2D" parent="."]
position = Vector2(5.96, 0)
target_position = Vector2(0, 20)

[node name="LandCast3" type="RayCast2D" parent="."]
position = Vector2(-5.96, 0)
target_position = Vector2(0, 20)

[node name="ChatBubble" type="Label" parent="."]
visible = false
z_index = 5
offset_left = 12.0
offset_top = -17.0
offset_right = 19.0
offset_bottom = 3.0
scale = Vector2(1e-05, 1e-05)
pivot_offset = Vector2(-1, 10)
theme = ExtResource("3_2oqec")
theme_override_styles/normal = SubResource("StyleBoxTexture_117a5")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timers" type="Node" parent="ChatBubble"]

[node name="ChatTimer" type="Timer" parent="ChatBubble"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="ChatBubble"]
libraries = {
"": SubResource("AnimationLibrary_fqt4x")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer2D" parent="."]
bus = &"Game"

[node name="Listener2D" type="AudioListener2D" parent="."]

[node name="Footstep" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_8lunl")
volume_db = -25.0
bus = &"Game"

[node name="JumpSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_5qh8x")
volume_db = -15.0
bus = &"Game"

[node name="ClothingEditSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_26tbm")
volume_db = -25.0
bus = &"Game"

[node name="LandSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_sn8ko")
volume_db = -20.0
bus = &"Game"

[connection signal="timeout" from="ChatBubble/ChatTimer" to="." method="_on_chat_timer_timeout"]
